--- a/Dockerfile-broker
+++ b/Dockerfile-broker
@@ -1,10 +1,4 @@
-FROM alpine:latest
-MAINTAINER caozg007
-ENV JAVA_HOME=/usr/lib/jvm/default-jvm/jre
-add repositories /etc/apk/repositories
-RUN apk upgrade --update-cache; \
-    apk add openjdk8-jre; \
-    rm -rf /tmp/* /var/cache/apk/*
+FROM 192.168.88.249/library/java:alpine
 MAINTAINER caozg
 WORKDIR /opt
 COPY broker-entrypoint.sh  broker-entrypoint.sh
