--- a/broker.properties
+++ b/broker.properties
@@ -2,6 +2,8 @@ brokerIP1=brokerip
 brokerName=test
 brokerClusterName=DefaultCluster
 brokerId=0
+#如一台服务器部署多个broker，需增加以下配置，区分不同端口号
+#listenPort=10921
 autoCreateTopicEnable=true
 autoCreateSubscriptionGroup=true
 rejectTransactionMessage=false
