--- a/broker.properties
+++ b/broker.properties
@@ -1,7 +1,11 @@
-brokerIP1=brokerip
-brokerName=test
-brokerClusterName=DefaultCluster
-brokerId=0
+#broker所运行的服务器主机IP
+brokerIP1=192.168.88.250
+#broker的名称，本案例采用两主两备，name分别为a和b
+brokerName=a
+#broker集群的名称，2组broker使用同一个名字
+brokerClusterName=ybl
+#：0为master,不是0的为slave，如1,2,3可以多个
+brokerId=1
 #如一台服务器部署多个broker，需增加以下配置，区分不同端口号
 #listenPort=10921
 autoCreateTopicEnable=true
