--- a/broker.properties
+++ b/broker.properties
@@ -31,3 +31,5 @@ brokerRole=ASYNC_MASTER
 flushDiskType=ASYNC_FLUSH
 cleanFileForciblyEnable=true
 transientStorePoolEnable=false
+#当服务器磁盘使用率达到92%时，broker停止写入
+diskMaxUsedSpaceRatio=92
