--- a/broker.properties
+++ b/broker.properties
@@ -4,7 +4,7 @@ brokerIP1=192.168.88.250
 brokerName=a
 #broker集群的名称，2组broker使用同一个名字
 brokerClusterName=ybl
-#：0为master,不是0的为slave，如1,2,3可以多个
+# 0为master,>0为slave
 brokerId=1
 #如一台服务器部署多个broker，需增加以下配置，区分不同端口号
 #listenPort=10921
@@ -12,12 +12,16 @@ autoCreateTopicEnable=true
 autoCreateSubscriptionGroup=true
 rejectTransactionMessage=false
 fetchNamesrvAddrByAddressServer=false
+#存储路径
 storePathRootDir=/root/store
+#commitlog存储路径
 storePathCommitLog=/root/store/commitlog
 flushIntervalCommitLog=500
 commitIntervalCommitLog=200
 flushCommitLogTimed=false
+#删除文件时间点，默认凌晨4点
 deleteWhen=04
+#文件保留时间，默认48小时
 fileReservedTime=72
 maxTransferBytesOnMessageInMemory=262144
 maxTransferCountOnMessageInMemory=32
