--- a/broker.properties
+++ b/broker.properties
@@ -1,5 +1,5 @@
 #broker所运行的服务器主机IP
-brokerIP1=192.168.88.250
+brokerIP1=brokerip
 #broker的名称，本案例采用两主两备，name分别为a和b
 brokerName=a
 #broker集群的名称，2组broker使用同一个名字
