--- a/broker.properties
+++ b/broker.properties
@@ -31,7 +31,9 @@ accessMessageInMemoryMaxRatio=40
 messageIndexEnable=true
 messageIndexSafe=false
 haMasterAddress=
+#broker角色
 brokerRole=ASYNC_MASTER
+#刷盘类型
 flushDiskType=ASYNC_FLUSH
 cleanFileForciblyEnable=true
 transientStorePoolEnable=false
