--- a/broker.properties
+++ b/broker.properties
@@ -8,7 +8,10 @@ brokerClusterName=ybl
 brokerId=1
 #如一台服务器部署多个broker，需增加以下配置，区分不同端口号
 #listenPort=10921
+
+#是否允许broker自动创建topic，建议线下开启，线上关闭
 autoCreateTopicEnable=true
+#是否允许broker自动创建订阅组，建议线下开启，线上关闭
 autoCreateSubscriptionGroup=true
 rejectTransactionMessage=false
 fetchNamesrvAddrByAddressServer=false
