--- a/Dockerfile-nameserver
+++ b/Dockerfile-nameserver
@@ -1,4 +1,4 @@
-FROM 192.168.88.249/library/java:alpine
+FROM java:alpine
 MAINTAINER caozg007
 WORKDIR /opt
 COPY nameserver-entrypoint.sh  nameserver-entrypoint.sh
