--- a/broker.properties
+++ b/broker.properties
@@ -34,9 +34,9 @@ accessMessageInMemoryMaxRatio=40
 messageIndexEnable=true
 messageIndexSafe=false
 haMasterAddress=
-#broker角色
+#broker角色，ASYNC_MASTER：异步复制主节点，如是slave节点改成SLAVE
 brokerRole=ASYNC_MASTER
-#刷盘类型
+#刷盘类型，异步刷盘
 flushDiskType=ASYNC_FLUSH
 cleanFileForciblyEnable=true
 transientStorePoolEnable=false
